<resources>
    <string name="app_name">Precarga</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_profile">Perfil</string>
    <string name="title_precarga">Precarga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_label">Texto</string>
    <string name="creditos">Créditos</string>
    <string name="tipo">Tipo de curso</string>
    <string name="instruccion_precarga">Seleccione materias a cargar</string>
    <string name="total_credit">Total de créditos</string>
    <string name="reticula">https://drive.google.com/file/d/1ASvrVjouFQzt_QUGHOcNYSDs1o1vfG2A/view?usp=sharing</string>
    <string name="precarga">https://drive.google.com/file/d/15RZmT-V2XVje8LF_9cOGp-phgvj8Gh6E/view?usp=sharing</string>
    <string name="docs_google_url_1">https://docs.google.com/viewer?embedded=true&amp;url=</string>
    <string name="docs_google_url_2">https://docs.google.com/viewer?url=</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Debe proporcionar el usuario</string>
    <string name="invalid_password">Debe proporcionar un password</string>
    <string name="login_failed">"¡Login fallido!"</string>
    <string name="login_unauthorized">Credenciales incorrectas</string>
    <string name="clave">clave</string>
    <string name="logout">cerrar sesión</string>
    <string name="semestre">Semestre</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="promedio">Promedio</string>
    <string name="repeticion">Repetición</string>
    <string name="especiales">Especiales</string>
    <string name="cred_acum">Créd. acum.</string>
    <string name="fecha_inscripcion">Fecha de inscripción</string>
    <string name="limite_carga">Límite de carga</string>
    <string name="mostrar_reticula">mostrar retícula</string>
    <string name="mostrar_precarga">mostrar precarga</string>
    <string name="error">Se ha producido un error al cargar los datos</string>
</resources>
