<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/personal_data_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/design_default_color_background"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toTopOf="@id/l_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/lg_h_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/text_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/semestre" />

                <TextView
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/porcentaje" />

                <TextView
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/promedio" />

                <TextView
                    android:id="@+id/text_semestre"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/text_porcentaje"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal"
                    android:text="88%" />

                <TextView
                    android:id="@+id/text_promedio"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="fill_horizontal" />

                <TextView
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/especiales" />

                <TextView
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/repeticion" />

                <TextView
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/cred_acum" />

                <TextView
                    android:id="@+id/text_especiales"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/text_repites"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/text_cred_acum"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:layout_gravity="fill_horizontal" />
            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/fecha_inscripcion" />

                <TextView
                    android:id="@+id/text_f_inscripcion"
                    android:layout_row="0"
                    android:layout_column="1" />

                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/limite_carga" />

                <TextView
                    android:id="@+id/text_limite_carga"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="36 máxima 20 mínima" />
            </GridLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/l_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/md_h_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_data_card">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reticula"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_reticula" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_precarga"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_precarga" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>